k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-virtualservice
  namespace: final-3tier
spec:
  hosts:
  - "*"  # 수정: Gateway와 일치하도록 변경
  gateways:
  - myapp-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: fastapi-app
        port:
          number: 80
